<resources>
    <string name="app_name">cSUN!</string>
    <string name="getting_started_1_text">cSun Increases your screen’s brightness magically
    to see it in sunny days</string>
    <string name="getting_started_2_text">How many times you turned down
        the brightness and went outside ? Now you can’t even see the screen</string>
    <string name="getting_started_3_text">Unlock your device with ease as cSun will light up your screen even if you are on the lock screen</string>
    <string name="Profiles">PROFILES</string>
    <string name="set_screen_brightness_to">SET SCREEN BRIGHTNESS TO :</string>
    <string name="increase_brightness_when">INCREASE BRIGHTNESS WHEN :</string>
    <string name="image_view_contentDescription">cSUN! ImageView</string>
    <string name="Deactivate">DEACTIVATE</string>
    <string name="Activate">ACTIVATE</string>
    <string name="p50">50%</string>
    <string name="p75">75%</string>
    <string name="p100">100%</string>
    <string name="start_on_boot">START ON BOOT</string>

</resources>
