<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dartzalabs.csun.MainActivity"
    android:background="@drawable/side_nav_bar">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_marginTop="100dp"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/button_boarder"
                android:text="@string/Activate"
                android:textColor="#ffff"
                android:textSize="30sp"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"
                />


            <Button

                android:id="@+id/button2"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_below="@+id/button1"
                android:layout_height="30dp"
                android:background="@drawable/button_boarder_deactivate"
                android:text="@string/Deactivate"
                android:textColor="#323a45"
                android:textSize="16sp"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"
                />




            <TextView
                android:textSize="21sp"
                android:textColor="#ffff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:id="@+id/profiles"
                android:layout_below="@+id/button2"
                android:layout_marginTop="80dp"
                android:text="@string/Profiles"
                android:fontFamily="sans-serif-thin"
                android:layout_centerHorizontal="true"

                />

            <View
                android:layout_width="25dp"
                android:layout_height="0.5dp"
                android:background="#ffff"
                android:layout_below="@+id/profiles"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/bottom_separator"
                />

            <TextView
                android:textSize="14sp"
                android:textColor="#ffff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:id="@+id/set_screen_brightness_to"
                android:layout_below="@+id/bottom_separator"
                android:layout_marginTop="10dp"
                android:text="@string/set_screen_brightness_to"
                android:fontFamily="sans-serif-thin"
                android:layout_centerHorizontal="true"

                />

            <Button
                android:id="@+id/p50"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_toLeftOf="@+id/p75"
                android:layout_toStartOf="@+id/p75"
                android:background="@drawable/button_boarder_profiles"
                android:layout_below="@id/set_screen_brightness_to"
                android:layout_marginTop="45dp"
                android:text="@string/p50"
                android:textColor="#ffff"
                android:textSize="25sp"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"
                />

            <Button
                android:id="@+id/p75"
                android:layout_centerHorizontal="true"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_boarder_profiles"
                android:layout_below="@id/set_screen_brightness_to"
                android:text="@string/p75"
                android:textColor="#ffff"
                android:textSize="25sp"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"
                />



            <Button
                android:id="@+id/p100"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_toRightOf="@+id/p75"
                android:layout_toEndOf="@+id/p75"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_boarder_profiles"
                android:text="@string/p100"
                android:textColor="#ffff"
                android:layout_below="@+id/set_screen_brightness_to"
                android:textSize="25sp"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"
                />





            <TextView
                android:textSize="14sp"
                android:textColor="#ffff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:id="@+id/increase_brightness_when"
                android:layout_below="@+id/p75"
                android:layout_marginTop="40dp"
                android:text="@string/increase_brightness_when"
                android:fontFamily="sans-serif-thin"
                android:layout_centerHorizontal="true"
                />



            <ImageView
                android:layout_toLeftOf="@+id/shady"
                android:layout_toStartOf="@+id/shady"
                android:id="@+id/cloudy"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/cloudy"
                android:layout_below="@+id/increase_brightness_when"
                android:contentDescription="@string/image_view_contentDescription">
            </ImageView>


            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:id="@+id/shady"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/shady"
                android:layout_below="@+id/increase_brightness_when"
                android:contentDescription="@string/image_view_contentDescription">
            </ImageView>



            <ImageView
                android:id="@+id/sunny"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_toRightOf="@+id/shady"
                android:layout_toEndOf="@+id/shady"
                android:layout_marginTop="35dp"
                android:src="@drawable/sunny"
                android:layout_below="@+id/increase_brightness_when"
                android:contentDescription="@string/image_view_contentDescription">
            </ImageView>



            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shady"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/start_on_boot"
                android:text="@string/start_on_boot"
                android:fontFamily="sans-serif-thin"
                android:textSize="14sp"
                android:textColor="#ffff"
                android:layout_marginBottom="35dp"/>

        </RelativeLayout>


</ScrollView>


